[gd_scene load_steps=2 format=3 uid="uid://7hwitau3vyjt"]

[ext_resource type="Script" uid="uid://bak34uta4o7ix" path="res://ui/esc_menu.gd" id="1_6qsfr"]

[node name="EscMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6qsfr")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="GridContainer" type="GridContainer" parent="MarginContainer/PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 32
theme_override_constants/v_separation = 16
columns = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/HBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Volume"

[node name="VolumeSlider" type="HSlider" parent="MarginContainer/PanelContainer/HBoxContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
max_value = 1.0
step = 0.001
value = 0.05

[node name="VSeparator" type="VSeparator" parent="MarginContainer/PanelContainer/HBoxContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 64)
layout_mode = 2

[node name="DisconnectButton" type="Button" parent="MarginContainer/PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Disconnect"
